--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,13 @@ anyhow = "1.0.71"
 bytes = "1.4.0"
 clap = { version = "4.3.0", features = ["derive"] }
 dirs = "5.0.1"
+futures = "0.3.28"
 lazy_static = "1.4.0"
 log = "0.4.18"
-reqwest = { version = "0.11.18", features = ["json", "gzip"] }
-rusqlite = "0.29.0"
+reqwest = { version = "0.11.18", features = ["json", "gzip", "rustls"] }
 serde = { version = "1.0.163", features = ["serde_derive"] }
 serde_json = "1.0.96"
 serde_yaml = "0.9.21"
 simple_logger = "4.1.0"
+sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
 tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "time"] }
