--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 bytes = "1.4.0"
+chrono = "0.4.26"
 clap = { version = "4.3.0", features = ["derive"] }
 dirs = "5.0.1"
 futures = "0.3.28"
@@ -21,4 +22,4 @@ serde_yaml = "0.9.21"
 simple_logger = "4.1.0"
 sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
 tera = "1.19.0"
-tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "time"] }
+tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread", "time", "fs"] }
