--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ dirs = "5.0.1"
 futures = "0.3.28"
 lazy_static = "1.4.0"
 log = "0.4.18"
+regex = "1.8.4"
 reqwest = { version = "0.11.18", features = ["json", "gzip", "rustls"] }
 serde = { version = "1.0.163", features = ["serde_derive"] }
 serde_json = "1.0.96"
