--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ bytes = "1.4.0"
 chrono = "0.4.26"
 clap = { version = "4.3.0", features = ["derive"] }
 dirs = "5.0.1"
+eframe = "0.22.0"
+egui = "0.22.0"
 futures = "0.3.28"
 lazy_static = "1.4.0"
 log = "0.4.18"
