--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,12 @@ clap = { version = "4.3.0", features = ["derive"] }
 eframe = "0.22.0"
 egui = "0.22.0"
 futures = "0.3.28"
+image = "0.24.6"
 lazy_static = "1.4.0"
 log = "0.4.18"
 regex = "1.8.4"
-reqwest = { version = "0.11.18", features = ["json", "gzip", "rustls"] }
+reqwest = { version = "0.11.18", features = ["json", "gzip", "rustls", "blocking", "cookies"] }
+reqwest_cookie_store = "0.6.0"
 serde = { version = "1.0.163", features = ["serde_derive"] }
 serde_json = "1.0.96"
 serde_yaml = "0.9.21"
