--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ chrono = "0.4.26"
 clap = { version = "4.3.0", features = ["derive"] }
 eframe = "0.22.0"
 egui = "0.22.0"
+env_logger = "0.10.0"
 futures = "0.3.28"
 image = "0.24.6"
 lazy_static = "1.4.0"
@@ -23,7 +24,6 @@ reqwest_cookie_store = "0.6.0"
 serde = { version = "1.0.163", features = ["serde_derive"] }
 serde_json = "1.0.96"
 serde_yaml = "0.9.21"
-simple_logger = "4.1.0"
 sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
 tera = "1.19.0"
 thiserror = "1.0.40"
