--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.72"
 bytes = "1.4.0"
-chrono = "0.4.26"
+chrono = { version = "0.4.26", default-features = false }
 eframe = "0.22.0"
 egui = "0.22.0"
 env_logger = "0.10.0"
