--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           # (required) Comma-separated list of binary names (non-extension portion of filename) to build and upload.
           # Note that glob pattern is not supported yet.
-          bin: weiback-rs
+          bin: weiback-rs,db-upgrade-tool
           archive: $bin-$tag-$target
           # (optional) On which platform to distribute the `.tar.gz` file.
           # [default value: unix]
