add unit test for user mod
Former-commit-id: 87563caadc7f12e3c9b9c013e047acd42c9c9fe8

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,6 @@ sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-rustls"] }
 tera = "1.19.1"
 thiserror = "1.0.52"
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "time", "fs"] }
+
+[dev-dependencies]
+flate2 = "1.0.28"
