--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,21 +11,32 @@ default-run = "weiback-rs"
 anyhow = { version = "1.0.79", features = ["backtrace"] }
 bytes = "1.5.0"
 chrono = { version = "0.4.31", default-features = false }
-eframe = "0.24.1"
-egui = "0.24.1"
+eframe = "0.25.0"
+egui = "0.25.0"
 env_logger = "0.10.1"
 futures = "0.3.30"
 image = "0.24.7"
 lazy_static = "1.4.0"
 log = "0.4.20"
 regex = "1.10.2"
-reqwest = { version = "0.11.23", features = ["json", "gzip", "rustls", "blocking", "cookies"] }
+reqwest = { version = "0.11.23", features = [
+    "json",
+    "gzip",
+    "rustls",
+    "blocking",
+    "cookies",
+] }
 reqwest_cookie_store = "0.6.0"
 serde = { version = "1.0.195", features = ["serde_derive"] }
 serde_json = "1.0.111"
 sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-rustls"] }
 tera = "1.19.1"
-tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "time", "fs"] }
+tokio = { version = "1.35.1", features = [
+    "macros",
+    "rt-multi-thread",
+    "time",
+    "fs",
+] }
 
 [dev-dependencies]
 flate2 = "1.0.28"
