重新组织了代码结构： 原来的代码耦合是相当重的，虽然中间已经大规模重构过一次了，但是逻辑和存储、网络之间的耦合还是相当重，需要进一步重构。 本次提交先把代码文件大致调整到不同模块里，后续再进行重构。 整体代码分为 ui, storage, exporter, network, auth 和 app 等模块，其中 app 实现下载备份的核心逻辑。 long_text, user, post, picture 等作为数据模型放在 app 下。
Former-commit-id: 4a518ef18ff89e0d4fa4abed651ab6954fb6b22b

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,17 @@ edition = "2021"
 default-run = "weiback-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "weiback"
+path = "src/lib.rs"
 
+[[bin]]
+name = "weiback-rs"
+path = "src/bin/weiback-rs/main.rs"
+
+[[bin]]
+name = "db-upgrade-tool"
+path = "src/bin/db-upgrade-tool.rs"
 
 [dependencies]
 anyhow = { version = "1.0.90", features = ["backtrace"] }
