--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "weiback-rs"
 version = "0.2.4"
-edition = "2021"
+edition = "2024"
 default-run = "weiback-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -29,13 +29,6 @@ image = "0.25.4"
 lazy_static = "1.5.0"
 log = "0.4.22"
 regex = "1.11.0"
-reqwest = { version = "0.12.8", features = [
-    "json",
-    "gzip",
-    "blocking",
-    "cookies",
-] }
-reqwest_cookie_store = "0.8.0"
 serde = { version = "1.0.211", features = ["serde_derive"] }
 serde_json = "1.0.132"
 sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls"] }
@@ -46,6 +39,7 @@ tokio = { version = "1.40.0", features = [
     "time",
     "fs",
 ] }
+weibosdk-rs = { git = "git://github.com:Shapooo/weibosdk-rs.git" }
 
 [dev-dependencies]
 flate2 = "1.0.34"
