--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ serde = { version = "1.0.211", features = ["serde_derive"] }
 serde_json = "1.0.132"
 sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls"] }
 tera = "1.20.0"
+thiserror = "2.0.12"
 tokio = { version = "1.40.0", features = [
     "macros",
     "rt-multi-thread",
