--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ egui = "0.32.0"
 env_logger = "0.11.5"
 futures = "0.3.31"
 image = "0.25.4"
+itertools = "0.14.0"
 lazy_static = "1.5.0"
 log = "0.4.22"
 regex = "1.11.0"
