重构 utils，使用 url 等库使更健壮
Former-commit-id: 6b5f1efe3f66517997b060a3757c80dbaed78dbf

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ tokio = { version = "1.46.1", features = [
     "fs",
 ] }
 weibosdk-rs = { git = "git://github.com:Shapooo/weibosdk-rs.git" }
+url = "2.5.4"
 
 [dev-dependencies]
 flate2 = "1.0.34"
