--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,8 @@ env_logger = "0.11.5"
 futures = "0.3.31"
 image = "0.25.4"
 itertools = "0.14.0"
-lazy_static = "1.5.0"
 log = "0.4.22"
+once_cell = "1.21.3"
 regex = "1.11.0"
 serde = { version = "1.0.211", features = ["serde_derive"] }
 serde_json = "1.0.132"
