--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ itertools = "0.14.0"
 log = "0.4.22"
 once_cell = "1.21.3"
 regex = "1.11.0"
+reqwest = "0.12.22"
 serde = { version = "1.0.211", features = ["serde_derive"] }
 serde_json = "1.0.132"
 sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls"] }
