--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ tokio = { version = "1.46.1", features = [
 ] }
 weibosdk-rs = { git = "git://github.com:Shapooo/weibosdk-rs.git" }
 url = "2.5.4"
+dirs = "6.0.0"
 
 [dev-dependencies]
 flate2 = "1.0.34"
