--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ tokio = { version = "1.46.1", features = [
     "time",
     "fs",
 ] }
-weibosdk-rs = { git = "git://github.com:Shapooo/weibosdk-rs.git" }
+weibosdk-rs = { git = "https://github.com/Shapooo/weibosdk-rs.git" }
 url = "2.5.4"
 dirs = "6.0.0"
 
