--- a/tauri-app/src-tauri/Cargo.toml
+++ b/tauri-app/src-tauri/Cargo.toml
@@ -1,34 +1,32 @@
 [package]
-name = "weiback-rs"
+name = "tauri-app"
 version.workspace = true
 edition.workspace = true
+default-run = "weiback-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[lib]
-name = "weiback"
-path = "src/lib.rs"
+[[bin]]
+name = "weiback-rs"
+path = "src/bin/weiback-rs/main.rs"
+
+[[bin]]
+name = "db-upgrade-tool"
+path = "src/bin/db-upgrade-tool.rs"
 
 [dependencies]
-bytes = { workspace = true }
 chrono = { workspace = true }
-dirs = { workspace = true }
-futures = { workspace = true }
-image = { workspace = true }
-itertools = {workspace = true }
+env_logger = { workspace = true }
 log = { workspace = true }
 once_cell = { workspace = true }
 regex = { workspace = true }
 reqwest = { workspace = true }
 tauri = { workspace = true }
 tauri-plugin-opener = { workspace = true }
-serde = { workspace = true }
 serde_json = { workspace = true }
 sqlx = { workspace = true }
-tera = { workspace = true }
-thiserror = { workspace = true }
 tokio = { workspace = true }
-url = { workspace = true }
 weibosdk-rs = { workspace = true }
+weiback-rs = { path = "../../weiback" }
 
-[dev-dependencies]
-flate2 = "1.0.34"
+[build-dependencies]
+tauri-build = { version = "2", features = [] }
