tauri-app 使用自定义 Error 或 anyhow，不再直接使用 weiback-rs 的 Error
Former-commit-id: 0f4d876520e9c5406efc0799f3e40359ed5670ba

--- a/tauri-app/src-tauri/Cargo.toml
+++ b/tauri-app/src-tauri/Cargo.toml
@@ -27,6 +27,7 @@ sqlx = { workspace = true }
 tokio = { workspace = true }
 weibosdk-rs = { workspace = true }
 weiback-rs = { path = "../../weiback" }
+anyhow = "1.0.98"
 
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
