--- a/weiback/Cargo.toml
+++ b/weiback/Cargo.toml
@@ -14,7 +14,7 @@ chrono = { workspace = true }
 dirs = { workspace = true }
 futures = { workspace = true }
 image = { workspace = true }
-itertools = {workspace = true }
+itertools = { workspace = true }
 log = { workspace = true }
 once_cell = { workspace = true }
 regex = { workspace = true }
@@ -32,3 +32,4 @@ weibosdk-rs = { workspace = true }
 
 [dev-dependencies]
 flate2 = "1.0.34"
+weibosdk-rs = { workspace = true, features = ["test-mocks"] }
