--- a/weiback/Cargo.toml
+++ b/weiback/Cargo.toml
@@ -32,4 +32,5 @@ weibosdk-rs = { workspace = true }
 
 [dev-dependencies]
 flate2 = "1.0.34"
+tempfile = "3.20.0"
 weibosdk-rs = { workspace = true, features = ["test-mocks"] }
