为 media_downloader 添加单元测试

--- a/weiback/Cargo.toml
+++ b/weiback/Cargo.toml
@@ -32,5 +32,6 @@ weibosdk-rs = { workspace = true }
 
 [dev-dependencies]
 flate2 = "1.0.34"
+mockito = "1.5.0"
 tempfile = "3.20.0"
 weibosdk-rs = { workspace = true, features = ["test-mocks"] }
