将数据库升级程序单独放一个 crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["weiback", "tauri-app/src-tauri"]
+members = ["weiback", "tauri-app/src-tauri", "tools"]
 resolver = "3"
 
 [workspace.package]
