--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.2.4"
 edition = "2024"
 
 [workspace.dependencies]
+anyhow = "1.0"
 bytes = "1"
 chrono = { version = "0.4", default-features = false }
 dirs = "6"
@@ -17,7 +18,8 @@ log = "0.4"
 once_cell = "1"
 regex = "1"
 reqwest = "0.12"
-tauri = { version = "2", features = [] }
+tauri = "2"
+tauri-build = "2"
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["serde_derive"] }
 serde_json = "1"
@@ -30,5 +32,5 @@ tokio = { version = "1.46.1", features = [
     "time",
     "fs",
 ] }
-url = "2.5.4"
+url = "2"
 weibosdk-rs = { path = "../weibosdk-rs" }
