添加 dev-mode feature，该模式下自动保存所有原始数据

--- a/tauri-app/src-tauri/Cargo.toml
+++ b/tauri-app/src-tauri/Cargo.toml
@@ -22,3 +22,6 @@ weibosdk-rs = { workspace = true }
 
 [build-dependencies]
 tauri-build = { workspace = true }
+
+[features]
+"dev-mode" = ["weiback-rs/dev-mode"]
