--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,4 +33,5 @@ tokio = { version = "1.46.1", features = [
     "fs",
 ] }
 url = "2"
+uuid = { version = "1", features = ["v7"] }
 weibosdk-rs = { path = "../weibosdk-rs" }
