--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ tauri = "2"
 tauri-build = "2"
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["serde_derive"] }
+serde-aux = "4"
 serde_json = "1"
 sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
 tera = "1"
