--- a/weiback/Cargo.toml
+++ b/weiback/Cargo.toml
@@ -19,6 +19,7 @@ once_cell = { workspace = true }
 regex = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
+serde-aux = { workspace = true }
 serde_json = { workspace = true }
 sqlx = { workspace = true }
 tera = { workspace = true }
