--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ itertools = "0.14"
 log = "0.4"
 once_cell = "1"
 regex = "1"
-reqwest = "0.12"
+reqwest = "0.13"
 tauri = "2"
 tauri-build = "2"
 tauri-plugin-opener = "2"
@@ -27,7 +27,7 @@ serde_json = "1"
 sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
 tera = "1"
 thiserror = "2"
-tokio = { version = "1.46.1", features = [
+tokio = { version = "1", features = [
     "macros",
     "rt-multi-thread",
     "time",
@@ -35,4 +35,4 @@ tokio = { version = "1.46.1", features = [
 ] }
 url = "2"
 uuid = { version = "1", features = ["v7"] }
-weibosdk-rs = { path = "../weibosdk-rs" }
+weibosdk-rs = { git = "https://github.com/Shapooo/weibosdk-rs.git", rev = "b27b57e97512e61e1db8967ff25c4af39b338853" }
