--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -11,9 +11,12 @@ path = "src/db-upgrade-tool.rs"
 anyhow.workspace = true
 chrono.workspace = true
 env_logger.workspace = true
+futures.workspace = true
 log.workspace = true
 once_cell.workspace = true
 regex.workspace = true
 serde_json.workspace = true
 sqlx.workspace = true
 tokio.workspace = true
+url.workspace = true
+weiback-rs = { path = "../weiback", features = ["internal-models"] }
