--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -16,6 +16,7 @@ futures.workspace = true
 log.workspace = true
 once_cell.workspace = true
 regex.workspace = true
+serde.workspace = true
 serde_json.workspace = true
 sqlx.workspace = true
 tokio.workspace = true
