--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ reqwest = "0.13"
 tauri = "2"
 tauri-build = "2"
 tauri-plugin-opener = "2"
+toml = "0.9"
 serde = { version = "1", features = ["serde_derive"] }
 serde-aux = "4"
 serde_json = "1"
