--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ regex = "1"
 reqwest = "0.13"
 tauri = "2"
 tauri-build = "2"
+tauri-plugin-dialog = "2"
 tauri-plugin-opener = "2"
 toml = "0.9"
 serde = { version = "1", features = ["serde_derive"] }
