图片获取失败时显示占位图片
临时定义一个 PictureError 以在图片不存在时返回对应信息给前端

--- a/tauri-app/src-tauri/Cargo.toml
+++ b/tauri-app/src-tauri/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/bin/weiback-rs/main.rs"
 anyhow = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
+serde = { workspace = true }
 serde_json = { workspace = true }
 tauri = { workspace = true }
 tauri-plugin-dialog = { workspace = true }
