--- a/weiback/Cargo.toml
+++ b/weiback/Cargo.toml
@@ -14,6 +14,7 @@ chrono = { workspace = true }
 dirs = { workspace = true }
 futures = { workspace = true }
 itertools = { workspace = true }
+lazy_static = { workspace = true }
 log = { workspace = true }
 once_cell = { workspace = true }
 regex = { workspace = true }
