更新日志文件路径，放到系统 data 目录 weiback 下

--- a/tauri-app/src-tauri/Cargo.toml
+++ b/tauri-app/src-tauri/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/bin/weiback-rs/main.rs"
 
 [dependencies]
 anyhow = { workspace = true }
+dirs = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
 serde = { workspace = true }
