--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ dirs = "6"
 env_logger = "0.11"
 futures = "0.3"
 itertools = "0.14"
+image = ">=0.21,<0.24"
+img_hash = "3.2"
 lazy_static = "1"
 log = "0.4"
 once_cell = "1"
